HIPCMS-245 repairing double scroll bar and clean out the style.css file in seperate files for each component

--- a/app/shared/toolbar/toolbar.component.css
+++ b/app/shared/toolbar/toolbar.component.css
@@ -171,3 +171,19 @@ ul.dropdown-menu li:hover {
 .notification a span {
     font-size: .9em;
 }
+
+.menu-button {
+    font-size: 48px;
+    line-height: 48px;
+    height: 48px;
+    width: 48px;
+}
+
+.toolbar-element {
+    display: block;
+    padding: 20px;
+}
+
+.toolbar-element:hover {
+    background: rgba(255, 255, 255, .2);
+}
